# ros2_SimRealRobotControl

./: LICENSE.md  README.md
dobot/: README.md
dobot/ros2srrc_dobot_gazebo/: CMakeLists.txt  package.xml
dobot/ros2srrc_dobot_gazebo/config/: dobot_controller.yaml
dobot/ros2srrc_dobot_gazebo/launch/: dobot_simulation.launch.py
dobot/ros2srrc_dobot_gazebo/urdf/: dobot.urdf.xacro  dobot_macro.urdf.xacro  dobot_ros2control.xacro  dobot_transmission.xacro
dobot/ros2srrc_dobot_gazebo/worlds/: dobot.world
dobot/ros2srrc_dobot_moveit2/: CMakeLists.txt  package.xml
dobot/ros2srrc_dobot_moveit2/config/: dobot.srdf  dobot_controllers.yaml  dobot_moveit2.rviz  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
dobot/ros2srrc_dobot_moveit2/launch/: dobot_interface.launch.py
include/: README.md
instructions/: Installation.md  ProgramExecution.md  ROS2EnvironmentLaunch.md  RobotOperation.md
irb120/: README.md
irb120/RobotStudio/: TRob1Main.mod  ros2_srrc (IFRA-Cranfield) - IRB120.rspag
irb120/ros2srrc_irb120_bringup/: CMakeLists.txt  package.xml
irb120/ros2srrc_irb120_bringup/config/: abb_controllers.yaml
irb120/ros2srrc_irb120_bringup/launch/: bringup.launch.py  irb120_bringup.launch.py
irb120/ros2srrc_irb120_gazebo/: CMakeLists.txt  package.xml
irb120/ros2srrc_irb120_gazebo/config/: irb120_controller.yaml  irb120egp64_controller.yaml
irb120/ros2srrc_irb120_gazebo/launch/: irb120_simulation.launch.py  simulation.launch.py
irb120/ros2srrc_irb120_gazebo/urdf/: box.urdf  irb120.urdf.xacro  irb120_macro.urdf.xacro  irb120_ros2control.xacro  irb120_transmission.xacro
irb120/ros2srrc_irb120_gazebo/worlds/: irb120.world
irb120/ros2srrc_irb120_moveit2/: CMakeLists.txt  package.xml
irb120/ros2srrc_irb120_moveit2/config/: irb120.srdf  irb120egp64.srdf  joint_limits_bringup.yaml  ompl_planning.yaml
irb120/ros2srrc_irb120_moveit2/launch/: irb120_interface.launch.py  moveit2.launch.py
ros2srrc_data/: CMakeLists.txt  README.md  package.xml
ros2srrc_data/action/: Move.action  Robmove.action  Sequence.action
ros2srrc_data/msg/: Action.msg  Joint.msg  Linkattacher.msg  Robmove.msg  Robpose.msg  Specs.msg  Xyzypr.msg  Ypr.msg
ros2srrc_endeffectors/: CMakeLists.txt  package.xml
ros2srrc_endeffectors/egp64/config/: controller.yaml  controller_moveit2.yaml  joint_limits.yaml  joint_specifications.yaml
ros2srrc_endeffectors/egp64/meshes/: egp64_FingerCylinder.dae  egp64_FingerCylinder.stl  egp64_FingerCylinder_L.dae  egp64_FingerCylinder_R.dae
ros2srrc_endeffectors/egp64/urdf/: egp64_macro.urdf.xacro  egp64_ros2control.xacro  egp64_transmission.xacro  egp64v2_macro.urdf.xacro
ros2srrc_endeffectors/gpp5010nc/config/: controller.yaml  controller_moveit2.yaml  joint_limits.yaml  joint_specifications.yaml
ros2srrc_endeffectors/gpp5010nc/meshes/: gpp5010nc_LeftFinger.dae  gpp5010nc_LeftFinger_v2.dae  gpp5010nc_MainBody.dae  gpp5010nc_RightFinger.dae  gpp5010nc_RightFinger_v2.dae  gpp5010nc_irb1200_Adapter.dae  gpp5010nc_irb6640_Adapter.dae
ros2srrc_endeffectors/gpp5010nc/urdf/: gpp5010nc_macro.urdf.xacro  gpp5010nc_ros2control.xacro  gpp5010nc_transmission.xacro  gpp5010ncv2_macro.urdf.xacro
ros2srrc_endeffectors/ls_vgr/config/: controller.yaml  controller_moveit2.yaml  joint_limits.yaml
ros2srrc_endeffectors/ls_vgr/urdf/: ls_vgr_macro.urdf.xacro  ls_vgr_transmission.xacro
ros2srrc_endeffectors/ls_vgr_amrc/meshes/: ls_vgr_amrc.dae
ros2srrc_endeffectors/ls_vgr_amrc/urdf/: ls_vgr_amrc_macro.urdf.xacro  (+2 more)
ros2srrc_execution/: CMakeLists.txt  README.md  package.xml
ros2srrc_execution/include/ros2srrc_execution/: moveg.h  movej.h  movel.h  mover.h  moverot.h  moverp.h  movexyz.h  movexyzw.h  moveypr.h
ros2srrc_execution/programs/: cubePP.txt  cubestacking.txt  irb120.txt  irb1200_demo.yaml  irb120_demo.yaml  irb120cubePP.txt  irb120cubePP_ROB.txt  irb120egp64.txt  irb120egp64_io.txt  irb6640_demo.yaml  templates.yaml  ur10e.txt  ur10e_table.txt  ur3.txt  ur3cubePP.txt  ur3robotiq.txt
ros2srrc_execution/python/: ExecuteProgram.py  RobotState.py  SpawnObject.py  TestClient.py  sequence.py
ros2srrc_execution/python/endeffector/: robotiq_ur.py  schunk_abb.py  vgr_abb.py  zimmer_abb.py
ros2srrc_execution/python/endeffector_gz/: parallelGripper.py  vacuumGripper.py
ros2srrc_execution/python/robot/: robot.py
ros2srrc_execution/python/testClients/: test_Move.py  test_PG.py  test_RobMove.py  test_VG.py
ros2srrc_execution/src/: move.cpp  moveg.cpp  movej.cpp  movel.cpp  mover.cpp  moverot.cpp  moverp.cpp  movexyz.cpp  movexyzw.cpp  moveypr.cpp  robmove.cpp  robpose.cpp  sequence.cpp
ros2srrc_launch/: CMakeLists.txt  package.xml
ros2srrc_launch/bringup/: bringup_abb.launch.py  bringup_ur.launch.py
ros2srrc_launch/gazebo/: simulation.launch.py
ros2srrc_launch/moveit2/: moveit2.launch.py
ros2srrc_robots/: CMakeLists.txt  package.xml
ur10e/: README.md
ur10e/ros2srrc_ur10_gazebo/: CMakeLists.txt  package.xml
ur10e/ros2srrc_ur10_moveit2/: CMakeLists.txt
ur10e/ros2srrc_ur10e_bringup/: CMakeLists.txt
ur3/: README.md
ur3/ros2srrc_ur3_bringup/: CMakeLists.txt  package.xml
ur3/ros2srrc_ur3_gazebo/: CMakeLists.txt  package.xml
ur3/ros2srrc_ur3_moveit2/: CMakeLists.txt  package.xml
ur3/ros2srrc_ur3_moveit2/config/: joint_limits.yaml  ompl_planning.yaml  ompl_planning_robotiq.yaml  ur3.srdf  ur3robotiq.srdf  urrobotiq_controllers.yaml
ur3/ros2srrc_ur3_moveit2/launch/: ur3_interface.launch.py
(+150 files in other folders)
